--- a/modeler.vcxproj.filters
+++ b/modeler.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Fogcpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="loadImage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
