finish the basic animating, we have finished 6 bonus

--- a/modeler.vcxproj.filters
+++ b/modeler.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="loadImage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="new_handle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
