finish drawing the new items and we can now twist the camera

--- a/modeler.vcxproj
+++ b/modeler.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="modelerglobals.h" />
     <ClInclude Include="modelerui.h" />
     <ClInclude Include="modelerview.h" />
+    <ClInclude Include="newdraw.h" />
     <ClInclude Include="SampleModel.h" />
     <ClInclude Include="vec.h" />
   </ItemGroup>
