--- a/modeler.vcxproj.filters
+++ b/modeler.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Lsystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IK.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="newdraw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IK.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
